# monty

./: CMakeLists.txt  executeInstructions.c  is_integer.c  main.c  monty  monty.h  op_add.c  op_create.c  op_mod.c  op_mul.c  op_nop.c  op_pall.c  op_pint.c  op_pop.c  op_push.c  op_sub.c  op_swap.c
